# codepot

./: Makefile.am  codepot.spec.in  configure  configure.ac
codepot/: Dockerfile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  codepot.spec.in  config.h.in  configure  configure.ac  mkmf.sh
codepot/DEBIAN/: Makefile.am  Makefile.in  changelog  conffiles  control.in  copyright  postinst.in  postrm.in
codepot/docker/: Dockerfile.alpine  Dockerfile.rocky  Dockerfile.rocky8  Dockerfile.rocky84  Dockerfile.ubnt  Dockerfile.ubnt2004  Makefile  Makefile.am  Makefile.in  README.md  alpine-httpd-fg.sh  apache2-fg.sh  build-rocky8.sh  build-rocky84.sh  build-ubnt2004.sh  httpd-fg.sh  readme.txt
codepot/docker/apache2-mod-perl/: APKBUILD
codepot/etc/: Makefile.am  Makefile.in  cloc.pl  codepot.a2ldap.in  codepot.httpd.in  codepot.ini.in  codepot.mysql  codepot.oracle  codepot.pgsql  codepot.sql  codepot.sqlite  post-commit  post-commit.in  post-revprop-change  post-revprop-change.in  pre-commit  pre-commit.in  pre-revprop-change  pre-revprop-change.in  repo.sh  start-commit  start-commit.in
codepot/etc/perl/Codepot/: AccessHandler.pm  AuthenHandler.pm
codepot/pecl-svn/: Makefile.am  Makefile.in  README  TODO  config.m4  config.w32  php_svn.h  svn.c  svn.ini
codepot/pecl-svn/examples/: hook_emailcommit.php
codepot/sbin/: Makefile.am  Makefile.in  codepot-mon-httpd  codepot-user.in
codepot/src/: Makefile.am  Makefile.in  config.php.in  gen-makefile-am-in-system.php  index.php
codepot/src/ace/: Makefile.am  Makefile.in
codepot/src/codepot/: Makefile.am  Makefile.in
codepot/src/codepot/config/: Makefile.am  Makefile.in  autoload.php  config.php  constants.php  database.php  lang_detect.php  mimes.php  routes.php
codepot/src/codepot/controllers/: Makefile.am  Makefile.in  api.php  code.php  file.php  graph.php  issue.php  main.php  project.php  site.php  source.php  user.php  wiki.php
codepot/src/codepot/core/: Makefile.am  Makefile.in
codepot/src/codepot/errors/: Makefile.in
codepot/src/codepot/helpers/: Makefile.am  Makefile.in  codepot_helper.php
codepot/src/codepot/hooks/: Makefile.in
codepot/src/codepot/language/: Makefile.in
codepot/src/codepot/libraries/: Lang_detect.php  Makefile.am  Makefile.in  converter.php  issuehelper.php  phpgraphlib.php  phpgraphlibpie.php  wikihelper.php
codepot/src/codepot/models/: Makefile.am  Makefile.in  codemodel.php  coderepomodel.php  codereviewmodel.php  dbloginmodel.php  filemodel.php  gitmodel.php  issuemodel.php  ldaploginmodel.php  loginmodel.php  logmodel.php  mysqlloginmodel.php  projectmodel.php  sitemodel.php  subversionmodel.php  usermodel.php  wikimodel.php
codepot/src/codepot/views/: Makefile.am  Makefile.in  code_blame.php  code_diff.php  code_edit.php  code_file.php  code_folder.php  code_history.php  code_revision.php  code_search.php  error.php  file_delete.php  file_edit.php  file_home.php  file_show.php  footer.php  graph_main.php  issue_delete.php  issue_edit.php  issue_home.php  issue_show.php  log.php  login.php  project_catalog.php  project_delete.php  project_edit.php  project_home.php  project_list.php  project_map.php  projectbar.php  site_adminhome.php  site_catalog.php  site_delete.php  site_edit.php  site_home.php  site_search.php  site_show.php  source_blame.php  source_diff.php  source_file.php  (+13 more)
codepot/src/css/: Makefile.am  Makefile.in  code.css  common.css  file.css  issue.css  jquery-ui.css  jqueryui-editable.css  log.css  project.css  site.css  user.css  websvn.css  wiki.css
codepot/src/css/fonts/: Makefile.am  Makefile.in
codepot/src/css/images/: Makefile.am  Makefile.in
codepot/src/js/: Chart.js  CodeFlower.js  Makefile.am  Makefile.in  codepot.js  creole.js  jquery-ui.min.js  medium-editor-tables.js  pdf.min.js  pdf.worker.min.js  showdown.js
codepot/src/js/prettify/: Makefile.am  Makefile.in
codepot/src/system/: Makefile.am  Makefile.in
codepot/src/system.bak/: license.txt
codepot/src/system.bak/codeigniter/: Base5.php  Makefile.am
codepot/src/system.bak/database/: DB_utility.php  Makefile.am
codepot/src/system.bak/fonts/: Makefile.in
codepot/src/system.bak/libraries/: Calendar.php  Cart.php  Exceptions.php  Hooks.php  Output.php  Router.php  Upload.php  Xmlrpc.php  Zip.php
codepot/src/system.bak/plugins/: Makefile.am
codepot/src/system/cache/: Makefile.am  Makefile.in
codepot/src/system/codeigniter/: Common.php  Makefile.in
codepot/src/system/core/: Lang.php  Makefile.in
codepot/src/system/database/: DB.php  DB_cache.php  DB_driver.php  Makefile.am  Makefile.in
codepot/src/system/fonts/: Makefile.am  Makefile.in
codepot/src/system/helpers/: Makefile.am  Makefile.in  url_helper.php
codepot/src/system/language/: Makefile.am  Makefile.in
codepot/src/system/libraries/: Config.php  Controller.php  Email.php  Encrypt.php  Form_validation.php  Ftp.php  Image_lib.php  Input.php  Language.php  Loader.php  Log.php  Makefile.am  Makefile.in  Pagination.php  Profiler.php  Session.php  Sha1.php  Table.php  Trackback.php  Typography.php  URI.php  Unit_test.php  Upload.php  User_agent.php  Validation.php  Xmlrpcs.php
codepot/src/system/logs/: Makefile.am  Makefile.in
codepot/src/system/plugins/: Makefile.in
codepot/src/system/scaffolding/: Makefile.am  Makefile.in  Scaffolding.php
codepot/src/systen.bak/codeigniter/: Base4.php
codepot/src/systen.bak/database/: DB_forge.php
codepot/src/systen.bak/helpers/: Makefile.in
codepot/src/systen.bak/language/: Makefile.am
codepot/src/systen.bak/libraries/: Model.php
codepot/src/websvn/: Makefile.am  Makefile.in  blame.php  comp.php  diff.php  filedetails.php  index.php  listing.php  log.php  revision.php
codepot/src/websvn/cache/: Makefile.am  Makefile.in
codepot/src/websvn/doc/: Makefile.am  Makefile.in
codepot/src/websvn/include/: Makefile.am  Makefile.in  config.php  configclass.php  setup.php  svnlook.php  (+1 more)
docker/: Dockerfile.rocky  Makefile.am  apache2-fg.sh
docker/apache2-mod-perl/: apache2-mod-perl.conf
src/system/core/: Makefile.am
src/system/libraries/: Makefile.am
(+190 files in other folders)
