wwwdir=$(WWWDIR)/ace
www_DATA = \
	ace.js \
	ext-beautify.js \
	ext-chromevox.js \
	ext-elastic_tabstops_lite.js \
	ext-emmet.js \
	ext-error_marker.js \
	ext-keybinding_menu.js \
	ext-language_tools.js \
	ext-linking.js \
	ext-modelist.js \
	ext-old_ie.js \
	ext-searchbox.js \
	ext-settings_menu.js \
	ext-spellcheck.js \
	ext-split.js \
	ext-static_highlight.js \
	ext-statusbar.js \
	ext-textarea.js \
	ext-themelist.js \
	ext-whitespace.js \
	keybinding-emacs.js \
	keybinding-vim.js \
	mode-abap.js \
	mode-abc.js \
	mode-actionscript.js \
	mode-ada.js \
	mode-apache_conf.js \
	mode-applescript.js \
	mode-asciidoc.js \
	mode-assembly_x86.js \
	mode-autohotkey.js \
	mode-batchfile.js \
	mode-c9search.js \
	mode-c_cpp.js \
	mode-cirru.js \
	mode-clojure.js \
	mode-cobol.js \
	mode-coffee.js \
	mode-coldfusion.js \
	mode-csharp.js \
	mode-css.js \
	mode-curly.js \
	mode-dart.js \
	mode-diff.js \
	mode-django.js \
	mode-d.js \
	mode-dockerfile.js \
	mode-dot.js \
	mode-eiffel.js \
	mode-ejs.js \
	mode-elixir.js \
	mode-elm.js \
	mode-erlang.js \
	mode-forth.js \
	mode-ftl.js \
	mode-gcode.js \
	mode-gherkin.js \
	mode-gitignore.js \
	mode-glsl.js \
	mode-golang.js \
	mode-groovy.js \
	mode-haml.js \
	mode-handlebars.js \
	mode-haskell.js \
	mode-haxe.js \
	mode-html.js \
	mode-html_ruby.js \
	mode-ini.js \
	mode-io.js \
	mode-jack.js \
	mode-jade.js \
	mode-java.js \
	mode-javascript.js \
	mode-jsoniq.js \
	mode-json.js \
	mode-jsp.js \
	mode-jsx.js \
	mode-julia.js \
	mode-latex.js \
	mode-lean.js \
	mode-less.js \
	mode-liquid.js \
	mode-lisp.js \
	mode-live_script.js \
	mode-livescript.js \
	mode-logiql.js \
	mode-lsl.js \
	mode-lua.js \
	mode-luapage.js \
	mode-lucene.js \
	mode-makefile.js \
	mode-markdown.js \
	mode-mask.js \
	mode-matlab.js \
	mode-mel.js \
	mode-mips_assembler.js \
	mode-mipsassembler.js \
	mode-mushcode.js \
	mode-mysql.js \
	mode-nix.js \
	mode-objectivec.js \
	mode-ocaml.js \
	mode-pascal.js \
	mode-perl.js \
	mode-pgsql.js \
	mode-php.js \
	mode-plain_text.js \
	mode-powershell.js \
	mode-praat.js \
	mode-prolog.js \
	mode-properties.js \
	mode-protobuf.js \
	mode-python.js \
	mode-rdoc.js \
	mode-rhtml.js \
	mode-r.js \
	mode-ruby.js \
	mode-rust.js \
	mode-sass.js \
	mode-scad.js \
	mode-scala.js \
	mode-scheme.js \
	mode-scss.js \
	mode-sh.js \
	mode-sjs.js \
	mode-smarty.js \
	mode-snippets.js \
	mode-soy_template.js \
	mode-space.js \
	mode-sql.js \
	mode-sqlserver.js \
	mode-stylus.js \
	mode-svg.js \
	mode-tcl.js \
	mode-tex.js \
	mode-textile.js \
	mode-text.js \
	mode-toml.js \
	mode-twig.js \
	mode-typescript.js \
	mode-vala.js \
	mode-vbscript.js \
	mode-velocity.js \
	mode-verilog.js \
	mode-vhdl.js \
	mode-xml.js \
	mode-xquery.js \
	mode-yaml.js \
	theme-ambiance.js \
	theme-chaos.js \
	theme-chrome.js \
	theme-clouds.js \
	theme-clouds_midnight.js \
	theme-cobalt.js \
	theme-crimson_editor.js \
	theme-dawn.js \
	theme-dreamweaver.js \
	theme-eclipse.js \
	theme-github.js \
	theme-idle_fingers.js \
	theme-iplastic.js \
	theme-katzenmilch.js \
	theme-kr_theme.js \
	theme-kuroir.js \
	theme-merbivore.js \
	theme-merbivore_soft.js \
	theme-mono_industrial.js \
	theme-monokai.js \
	theme-pastel_on_dark.js \
	theme-solarized_dark.js \
	theme-solarized_light.js \
	theme-sqlserver.js \
	theme-terminal.js \
	theme-textmate.js \
	theme-tomorrow.js \
	theme-tomorrow_night_blue.js \
	theme-tomorrow_night_bright.js \
	theme-tomorrow_night_eighties.js \
	theme-tomorrow_night.js \
	theme-twilight.js \
	theme-vibrant_ink.js \
	theme-xcode.js \
	worker-coffee.js \
	worker-css.js \
	worker-html.js \
	worker-javascript.js \
	worker-json.js \
	worker-lua.js \
	worker-php.js \
	worker-xml.js \
	worker-xquery.js 

EXTRA_DIST = $(www_DATA)

