SUBDIRS = fonts images

wwwdir=$(WWWDIR)/css
www_DATA =  \
	code.css \
	common.css \
	file.css \
	font-awesome.min.css \
	issue.css \
	jquery-ui.css \
	jqueryui-editable.css \
	log.css \
	medium-editor.min.css \
	medium-editor-tables.min.css \
	medium-editor-theme.min.css \
	project.css \
	site.css \
	user.css \
	wiki.css

EXTRA_DIST = $(www_DATA)

