SUBDIRS =  prettify

wwwdir=$(WWWDIR)/js
www_DATA = \
	codepot.js \
	creole.js  \
	jquery.min.js \
	jquery-ui.min.js \
	jquery.flot.canvas.min.js \
	jquery.flot.min.js \
	jquery.flot.categories.min.js \
	jquery.flot.crosshair.min.js \
	jquery.flot.errorbars.min.js \
	jquery.flot.fillbetween.min.js \
	jquery.flot.image.min.js \
	jquery.flot.navigate.min.js \
	jquery.flot.pie.min.js \
	jquery.flot.resize.min.js \
	jquery.flot.selection.min.js \
	jquery.flot.stack.min.js \
	jquery.flot.symbol.min.js \
	jquery.flot.threshold.min.js \
	jquery.flot.time.min.js \
	excanvas.min.js \
	jquery.flot.tickrotor.js \
	jqueryui-editable.min.js \
	medium-editor.js \
	medium-editor-tables.js \
	showdown.js \
	d3.min.js \
	CodeFlower.js

EXTRA_DIST = $(www_DATA)

