SUBDIRS =  cache doc include languages lib temp templates

wwwdir=$(WWWDIR)/websvn
www_DATA =  \
	blame.php \
	comp.php \
	diff.php \
	dl.php \
	filedetails.php \
	form.php \
	index.php \
	listing.php \
	log.php \
	revision.php \
	rss.php \
	wsvn.php

EXTRA_DIST = $(www_DATA) license.txt changes.txt

