wwwdir=$(WWWDIR)/system/core

www_DATA= \
	Controller.php \
	Config.php \
	Hooks.php \
	Utf8.php \
	index.html \
	Loader.php \
	Router.php \
	URI.php \
	Security.php \
	Benchmark.php \
	Input.php \
	Model.php \
	Output.php \
	Common.php \
	Lang.php \
	Exceptions.php \
	CodeIgniter.php

EXTRA_DIST = $(www_DATA)
