SUBDIRS= \
	javascript \
	Cache

wwwdir=$(WWWDIR)/system/libraries

www_DATA= \
	Profiler.php \
	Sha1.php \
	Xmlrpcs.php \
	Pagination.php \
	Table.php \
	Form_validation.php \
	Trackback.php \
	User_agent.php \
	Driver.php \
	Email.php \
	Upload.php \
	Calendar.php \
	Typography.php \
	Xmlrpc.php \
	index.html \
	Encrypt.php \
	Cart.php \
	Log.php \
	Session.php \
	Migration.php \
	Parser.php \
	Image_lib.php \
	Ftp.php \
	Zip.php \
	Javascript.php \
	Unit_test.php

EXTRA_DIST = $(www_DATA)
