wwwdir=$(WWWDIR)/codepot/models
www_DATA =  \
	codemodel.php \
	dbloginmodel.php \
	filemodel.php \
	gitmodel.php \
	index.html \
	issuemodel.php \
	ldaploginmodel.php \
	loginmodel.php \
	logmodel.php \
	projectmodel.php \
	sitemodel.php \
	subversionmodel.php \
	usermodel.php \
	wikimodel.php

EXTRA_DIST = $(www_DATA)

