wwwdir=$(WWWDIR)/codepot/views
www_DATA =  \
	error.php \
	file_delete.php \
	file_edit.php \
	file_home.php \
	file_show.php \
	footer.php \
	index.html \
	log.php \
	login.php \
	project_delete.php \
	project_edit.php \
	project_home.php \
	project_list.php \
	projectbar.php \
	site_edit.php \
	site_delete.php \
	site_home.php \
	source_blame.php \
	source_diff.php \
	source_file.php \
	source_folder.php \
	source_history.php \
	source_revision.php \
	taskbar.php \
	wiki_delete.php \
	wiki_edit.php \
	wiki_home.php \
	wiki_show.php

EXTRA_DIST = $(www_DATA)

