wwwdir=$(WWWDIR)/codepot/views
www_DATA =  \
	error.php \
	code_blame.php \
	code_diff.php \
	code_file.php \
	code_folder.php \
	code_history.php \
	code_revision.php \
	file_delete.php \
	file_edit.php \
	file_home.php \
	file_show.php \
	footer.php \
	index.html \
	issue_delete.php \
	issue_edit.php \
	issue_home.php \
	issue_show.php \
	log.php \
	login.php \
	project_delete.php \
	project_edit.php \
	project_home.php \
	project_list.php \
	projectbar.php \
	site_adminhome.php \
	site_edit.php \
	site_delete.php \
	site_home.php \
	site_show.php \
	taskbar.php \
	wiki_delete.php \
	wiki_edit.php \
	wiki_home.php \
	wiki_show.php

EXTRA_DIST = $(www_DATA)

