wwwdir=$(WWWDIR)/codepot/views
www_DATA =  \
	error.php \
	code_blame.php \
	code_diff.php \
	code_edit.php \
	code_file.php \
	code_folder.php \
	code_history.php \
	code_revision.php \
	code_search.php \
	file_home.php \
	file_show.php \
	footer.php \
	graph_main.php \
	index.html \
	issue_home.php \
	issue_show.php \
	log.php \
	login.php \
	project_catalog.php \
	project_delete.php \
	project_edit.php \
	project_map.php \
	project_home.php \
	projectbar.php \
	site_catalog.php \
	site_edit.php \
	site_delete.php \
	site_home.php \
	site_search.php \
	site_show.php \
	taskbar.php \
	user_home.php \
	user_settings.php \
	wiki_edit.php \
	wiki_editx.php \
	wiki_home.php \
	wiki_show.php

EXTRA_DIST = $(www_DATA)

