wwwdir=$(WWWDIR)/css/images
www_DATA =  \
	add.png \
	arrow_in.png \
	arrow_out.png \
	blame.png \
	bullet_add.png \
	bullet_delete.png \
	bullet_yellow.png \
	compress.png \
	css.png \
	cube_green.png \
	delete.png \
	diff.png \
	e-node.png \
	exclamation.png \
	favicon.ico \
	file.png \
	filec.png \
	filedb.png \
	fileh.png \
	filepaint.png \
	filephp.png \
	files.png \
	filetxt.png \
	filexml.png \
	folder.png \
	html.png \
	i-node.png \
	l-node.png \
	log.png \
	page_white_add.png \
	page_white_delete.png \
	page_white_edit.png \
	script.png \
	sitemap_color.png \
	submitbg.png \
	t-node.png \
	textbg.png \
	toggledown.png \
	toggleup.png \
	up.png \
	xml.gif

EXTRA_DIST = $(www_DATA)

