wwwdir=$(WWWDIR)/css/images
www_DATA =  \
	add.png \
	arrow_in.png \
	arrow_out.png \
	blame.png \
	bullet_add.png \
	bullet_delete.png \
	bullet_yellow.png \
	compress.png \
	css.png \
	cube_green.png \
	delete.png \
	diff.png \
	e-node.png \
	exclamation.png \
	file.png \
	filec.png \
	filedb.png \
	fileh.png \
	filepaint.png \
	filephp.png \
	files.png \
	filetxt.png \
	filexml.png \
	folder.png \
	html.png \
	i-node.png \
	l-node.png \
	log.png \
	page_white_add.png \
	page_white_delete.png \
	page_white_edit.png \
	password.png \
	script.png \
	sitemap_color.png \
	submitbg.png \
	t-node.png \
	textbg.png \
	toggledown.png \
	toggleup.png \
	ui-bg_flat_0_aaaaaa_40x100.png \
	ui-bg_flat_0_eeeeee_40x100.png \
	ui-bg_flat_55_ffffff_40x100.png \
	ui-bg_flat_75_ffffff_40x100.png \
	ui-bg_glass_65_ffffff_1x400.png \
	ui-bg_highlight-soft_100_f6f6f6_1x100.png \
	ui-bg_highlight-soft_25_0073ea_1x100.png \
	ui-bg_highlight-soft_50_dddddd_1x100.png \
	ui-icons_0073ea_256x240.png \
	ui-icons_454545_256x240.png \
	ui-icons_666666_256x240.png \
	ui-icons_ff0084_256x240.png \
	ui-icons_ffffff_256x240.png \
	ui-bg_gloss-wave_35_f6a828_500x100.png \
	ui-bg_flat_10_000000_40x100.png \
	ui-bg_diagonals-thick_20_666666_40x40.png \
	ui-bg_diagonals-thick_18_b81900_40x40.png \
	ui-bg_highlight-soft_75_ffe45c_1x100.png \
	ui-bg_highlight-soft_100_eeeeee_1x100.png \
	ui-bg_glass_100_fdf5ce_1x400.png \
	ui-bg_glass_100_f6f6f6_1x400.png \
	ui-icons_ffd27a_256x240.png \
	ui-icons_ef8c08_256x240.png \
	ui-icons_228ef1_256x240.png \
	ui-icons_222222_256x240.png \
	ui-anim_basic_16x16.gif \
	up.png \
	username.png \
	jqueryui-editable-loading.gif \
	jqueryui-editable-clear.png

EXTRA_DIST = $(www_DATA)

