wwwdir=$(WWWDIR)/js/prettify
www_DATA =  \
	lang-ada.js \
	lang-apollo.js \
	lang-basic.js \
	lang-clj.js \
	lang-css.js \
	lang-dart.js \
	lang-erlang.js \
	lang-go.js \
	lang-hs.js \
	lang-lisp.js \
	lang-llvm.js \
	lang-lua.js \
	lang-matlab.js \
	lang-ml.js \
	lang-mumps.js \
	lang-n.js \
	lang-pascal.js \
	lang-proto.js \
	lang-r.js \
	lang-rd.js \
	lang-scala.js \
	lang-sql.js \
	lang-tcl.js \
	lang-tex.js \
	lang-vb.js \
	lang-vhdl.js \
	lang-wiki.js \
	lang-xq.js \
	lang-yaml.js \
	prettify.css \
	prettify.js

EXTRA_DIST = $(www_DATA)

