wwwdir=$(WWWDIR)/system/helpers
www_DATA =  \
	array_helper.php \
	compatibility_helper.php \
	cookie_helper.php \
	date_helper.php \
	directory_helper.php \
	download_helper.php \
	email_helper.php \
	file_helper.php \
	form_helper.php \
	html_helper.php \
	index.html \
	inflector_helper.php \
	language_helper.php \
	number_helper.php \
	path_helper.php \
	security_helper.php \
	smiley_helper.php \
	string_helper.php \
	text_helper.php \
	typography_helper.php \
	url_helper.php \
	xml_helper.php

EXTRA_DIST = $(www_DATA)

