wwwdir=$(WWWDIR)/system/helpers

www_DATA= \
	email_helper.php \
	smiley_helper.php \
	path_helper.php \
	inflector_helper.php \
	language_helper.php \
	cookie_helper.php \
	index.html \
	captcha_helper.php \
	form_helper.php \
	number_helper.php \
	directory_helper.php \
	typography_helper.php \
	html_helper.php \
	xml_helper.php \
	security_helper.php \
	url_helper.php \
	file_helper.php \
	array_helper.php \
	date_helper.php \
	string_helper.php \
	text_helper.php \
	download_helper.php

EXTRA_DIST = $(www_DATA)
