wwwdir=$(WWWDIR)/system/libraries
www_DATA =  \
	Benchmark.php \
	Calendar.php \
	Cart.php \
	Config.php \
	Controller.php \
	Email.php \
	Encrypt.php \
	Exceptions.php \
	Form_validation.php \
	Ftp.php \
	Hooks.php \
	Image_lib.php \
	Input.php \
	Language.php \
	Loader.php \
	Log.php \
	Model.php \
	Output.php \
	Pagination.php \
	Parser.php \
	Profiler.php \
	Router.php \
	Session.php \
	Sha1.php \
	Table.php \
	Trackback.php \
	Typography.php \
	URI.php \
	Unit_test.php \
	Upload.php \
	User_agent.php \
	Validation.php \
	Xmlrpc.php \
	Xmlrpcs.php \
	Zip.php \
	index.html

EXTRA_DIST = $(www_DATA)

