wwwdir=$(WWWDIR)/websvn/languages
www_DATA =  \
	catalan.php \
	czech.php \
	danish.php \
	dutch.php \
	english.php \
	finnish.php \
	french.php \
	german.php \
	hebrew.php \
	hungarian.php \
	indonesian.php \
	italian.php \
	japanese.php \
	korean.php \
	languages.php \
	norwegian.php \
	polish.php \
	portuguese-br.php \
	portuguese.php \
	russian.php \
	schinese.php \
	slovak.php \
	slovenian.php \
	spanish.php \
	swedish.php \
	tchinese.php \
	turkish.php \
	uzbek.php

EXTRA_DIST = $(www_DATA)

