wwwdir=$(WWWDIR)/system/language/english
www_DATA =  \
	calendar_lang.php \
	date_lang.php \
	db_lang.php \
	email_lang.php \
	form_validation_lang.php \
	ftp_lang.php \
	imglib_lang.php \
	index.html \
	number_lang.php \
	profiler_lang.php \
	scaffolding_lang.php \
	unit_test_lang.php \
	upload_lang.php \
	validation_lang.php

EXTRA_DIST = $(www_DATA)

