wwwdir=$(WWWDIR)/system/language/english

www_DATA= \
	ftp_lang.php \
	form_validation_lang.php \
	index.html \
	unit_test_lang.php \
	imglib_lang.php \
	email_lang.php \
	db_lang.php \
	date_lang.php \
	profiler_lang.php \
	calendar_lang.php \
	upload_lang.php \
	migration_lang.php \
	number_lang.php

EXTRA_DIST = $(www_DATA)
