wwwdir=$(WWWDIR)/websvn/lib/geshi
www_DATA =  \
	abap.php \
	actionscript.php \
	actionscript3.php \
	ada.php \
	apache.php \
	applescript.php \
	apt_sources.php \
	asm.php \
	asp.php \
	autoit.php \
	avisynth.php \
	bash.php \
	basic4gl.php \
	blitzbasic.php \
	bnf.php \
	boo.php \
	c.php \
	c_mac.php \
	caddcl.php \
	cadlisp.php \
	cfdg.php \
	cfm.php \
	cil.php \
	cobol.php \
	cpp-qt.php \
	cpp.php \
	csharp.php \
	css.php \
	d.php \
	delphi.php \
	diff.php \
	div.php \
	dos.php \
	dot.php \
	eiffel.php \
	email.php \
	fortran.php \
	freebasic.php \
	genero.php \
	gettext.php \
	glsl.php \
	gml.php \
	gnuplot.php \
	groovy.php \
	haskell.php \
	html4strict.php \
	idl.php \
	ini.php \
	inno.php \
	io.php \
	java.php \
	java5.php \
	javascript.php \
	kixtart.php \
	klonec.php \
	klonecpp.php \
	latex.php \
	lisp.php \
	lotusformulas.php \
	lotusscript.php \
	lua.php \
	m68k.php \
	make.php \
	matlab.php \
	mirc.php \
	mpasm.php \
	mxml.php \
	mysql.php \
	nsis.php \
	objc.php \
	ocaml-brief.php \
	ocaml.php \
	oobas.php \
	oracle11.php \
	oracle8.php \
	pascal.php \
	per.php \
	perl.php \
	php-brief.php \
	php.php \
	pic16.php \
	plsql.php \
	povray.php \
	powershell.php \
	progress.php \
	prolog.php \
	python.php \
	qbasic.php \
	rails.php \
	reg.php \
	robots.php \
	ruby.php \
	sas.php \
	scala.php \
	scheme.php \
	scilab.php \
	sdlbasic.php \
	smalltalk.php \
	smarty.php \
	sql.php \
	tcl.php \
	teraterm.php \
	text.php \
	thinbasic.php \
	tsql.php \
	typoscript.php \
	vb.php \
	vbnet.php \
	verilog.php \
	vhdl.php \
	visualfoxpro.php \
	winbatch.php \
	xml.php \
	xorg_conf.php \
	xpp.php \
	z80.php

EXTRA_DIST = $(www_DATA)

