SUBDIRS =  images star-light

wwwdir=$(WWWDIR)/websvn/templates/calm
www_DATA =  \
	blame.tmpl \
	collapse.js \
	compare.tmpl \
	diff.tmpl \
	directory.tmpl \
	file.tmpl \
	footer.tmpl \
	header.tmpl \
	index.tmpl \
	log.tmpl \
	png.js \
	revision.tmpl \
	styles.css

EXTRA_DIST = $(www_DATA) README.txt

