SUBDIRS =  smilies src

wwwdir=$(WWWDIR)/websvn/templates/calm/star-light
www_DATA =  \
	bindings.xml \
	moz-behaviors.xml \
	star-css.htc \
	star-email.htc \
	star-htc.htc \
	star-html.htc \
	star-js.htc \
	star-light.css \
	star-light.htc \
	star-php.htc \
	star-tsql.htc \
	star-vbs.htc \
	star-xml.htc

EXTRA_DIST = $(www_DATA)

